# PMM

./: .gitignore  NorthAmerica.ipynb  PMM_environment.yml  README.md  pyproject.toml
DATA/ar6_regions/land/: pr_metrics_ts_ARP.nc  pr_metrics_ts_CAF.nc  pr_metrics_ts_CAR.nc  pr_metrics_ts_CAU.nc  pr_metrics_ts_CNA.nc  pr_metrics_ts_EAN.nc  pr_metrics_ts_EAS.nc  pr_metrics_ts_EAU.nc  pr_metrics_ts_ECA.nc  pr_metrics_ts_EEU.nc  pr_metrics_ts_ENA.nc  pr_metrics_ts_ESAF.nc  pr_metrics_ts_ESB.nc  pr_metrics_ts_GIC.nc  pr_metrics_ts_MDG.nc  pr_metrics_ts_MED.nc  pr_metrics_ts_NAU.nc  pr_metrics_ts_NCA.nc  pr_metrics_ts_NEAF.nc  pr_metrics_ts_NEN.nc  pr_metrics_ts_NES.nc  pr_metrics_ts_NEU.nc  pr_metrics_ts_NSA.nc  pr_metrics_ts_NWN.nc  pr_metrics_ts_NWS.nc  pr_metrics_ts_NZ.nc  pr_metrics_ts_RAR.nc  pr_metrics_ts_RFE.nc  pr_metrics_ts_SAH.nc  pr_metrics_ts_SAM.nc  pr_metrics_ts_SAS.nc  pr_metrics_ts_SAU.nc  pr_metrics_ts_SCA.nc  pr_metrics_ts_SEA.nc  pr_metrics_ts_SEAF.nc  pr_metrics_ts_SES.nc  pr_metrics_ts_SSA.nc  pr_metrics_ts_SWS.nc  pr_metrics_ts_TIB.nc  pr_metrics_ts_WAF.nc  (+6 more)
DATA/ar6_regions/ocean/: pr_metrics_ts_ARO.nc  pr_metrics_ts_ARS.nc  pr_metrics_ts_BOB.nc  pr_metrics_ts_CAR.nc  pr_metrics_ts_EAO.nc  pr_metrics_ts_EIO.nc  pr_metrics_ts_EPO.nc  pr_metrics_ts_MED.nc  pr_metrics_ts_NAO.nc  pr_metrics_ts_NPO.nc  pr_metrics_ts_SAO.nc  pr_metrics_ts_SEA.nc  (+3 more)
notebooks/: AR6_All_Regions.ipynb  AR6_Individual_Regions.ipynb
trend_detector/: ar6models.py  io.py  plotting.py  spatial.py
trend_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
